 * Introduce parallelization API to `AnalysisBase` and to `analysis.rms.RMSD` class
   (Issue #4158, PR #4304)
 * Enables parallelization for analysis.gnm.GNMAnalysis (Issue #4672)
 * explicitly mark `analysis.pca.PCA` as not parallelizable (Issue #4680)
 * enables parallelization for analysis.bat.BAT (Issue #4663)
 * enable parallelization for analysis.dihedrals.{Dihedral,Ramachandran,Janin}
   (Issue #4673)  
 * Enables parallelization for analysis.hydrogenbonds.hbond_analysis.HydrogenBondAnalysis (Issue #4664)
 * Improve error message for `AtomGroup.unwrap()` when bonds are not present.(Issue #4436, PR #4642)
 * Add `analysis.DSSP` module for protein secondary structure assignment, based on [pydssp](https://github.com/ShintaroMinami/PyDSSP)
 * Added a tqdm progress bar for `MDAnalysis.analysis.pca.PCA.transform()`
   (PR #4531)
 * Improved performance of PDBWriter (Issue #2785, PR #4472)
 * Added parsing of arbitrary columns of the LAMMPS dump parser. (Issue #3504)
 * Documented the r0 attribute in the `Contacts` class and added the
   `n_initial_contacts` attribute, with documentation. (Issue #2604, PR #4415)
 * Implement average structures with iterative algorithm from
   DOI 10.1021/acs.jpcb.7b11988. (Issue #2039, PR #4524)

Changes
 * The `fetch_mmtf` method has been removed as the REST API service
   for MMTF files has ceased to exist (Issue #4634)
 * MDAnalysis now builds against numpy 2.0 rather than the
   minimum supported numpy version (PR #4620)
 * As per SPEC0 the minimum supported Python version has been raised
   to 3.10 (PR #4502)
 * MDAnalysis.analysis.hole2 is now directly imported from the mdakit
   mdahole2. This module is deprecated and will be fully removed in
   MDAnalysis version 3.0 (PR #4464)
 * Testsuite packaging now uses a pyproject.toml file (PR #4463)
 * Improvement of setuptools packaging, including deduplication of
   dependency lists (PR #4424)
 * As per NEP29, the minimum version of numpy has been raised to 1.23.